--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: YM135
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Ready to code
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://cdn4.iconfinder.com/data/icons/superheroes/512/batman-512.png
 #
 # Flags below are optional
 #
